# show_designer

./: .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cerrar Luces.bat  LICENSE  Luces Barras.bat  Luces Espana.bat  Luces Red Sun.bat  Luces.bat  README.es.md  README.md  ROADMAP.md  ROADMAP_v3.md  ROADMAP_v4.md  SETUP.md  STRUCTURE.md  ShowDesigner.iss  conftest.py  fixtures.json  launch_show_designer.bat  mkdocs.yml  output_targets.json  presets.json  pyproject.toml  pytest.ini  requirements.txt  show_timeline.json  showdesigner.spec
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  frontend-ci.yml  python-ci.yml
analizadas/10-CONCEPTUAL-Red_Sun/: analysis.json
analizadas/billie_eilish_bad_guy/: analysis.json  timeseries.npz  transcription.mid
analizadas/el_taser_de_mama_remix/: analysis.json  curation.json  transcription.mid  waveform.json
analizadas/lola_indigo_la_santa/: analysis.json  timeseries.npz  transcription.mid
analizadas/metrika_la_zowi_xiyo_fernandezz_kristina_dbasto_pichi_el_taser_de_mamá_remix/: analysis.json  timeseries.npz  transcription.mid
docs/: faq.md  features.md  hardware.md  index.md  installation.md  license.md  quickstart.md
docs/adr/: 001-param-pipeline.md  002-patterns-expansion.md  003-normalizacion-senales.md  004-channel-mixing-policy.md  (+1 more)
docs/advanced/: mcp.md  (+4 more)
plugins/: __init__.py
profiles/: dimmer_1ch.json  generic_beam_18ch.json  generic_mover_16ch.json  generic_strobe_2ch.json  generic_wash_15ch.json  wled_strip_93.json
scripts/: _capture_screenshots.py  _encender_todo.py  _print_rig.py  _render_red_sun_preview.py  _validate_red_sun.py  analyze_audio_red_sun.py  analyze_red_sun.py  build_installer.ps1  crear_pista_patinaje.py  create_himno_show.py  create_red_sun_show.py  create_taser_barras.py  next_prompt.py  process_stems.py  verify_bandera.py
server/: __init__.py  audio_headless.py  auth.py  dispatcher.py  exporters.py  gesture_log.py  json_rpc.py  key_detector.py  live_engine.py  live_input.py  main.py  marketplace.py  offline_render.py  osc_bridge.py  presets.py  rest_api.py  session.py  show_bundle.py  show_generator.py  tempo_sync.py  tick.py  timeline_export.py  toggles.py  undo_manager.py  validators.py  video_export.py  web.py  webhooks.py
src/: __init__.py  _paths.py  _setup_paths.py  legacy_show.py  log.py
tests/: plugin_test_harness.py  test_analyzer_service.py  test_arranger.py  test_automation.py  test_autosave.py  test_autovj.py  test_bench_frame.py  test_bench_scale.py  test_build.py  test_channel_effects.py  test_clip_uid.py  test_color_async.py  test_cue_points_v2.py  test_cues.py  test_curation.py  test_dispatcher.py  test_dmx_render.py  test_dmx_usb.py  test_drag_create_channel.py  test_effects_nuevos.py  test_effects_render.py  test_exporter.py  test_f0_pipeline.py  test_f0_schema_v3.py  test_fixture_editor.py  test_fixture_test_advanced.py  test_gdtf_browser.py  test_gdtf_loader.py  test_generation_tools.py  test_gesture_log.py  test_groups_collapse.py  test_key_detection.py  test_live_engine.py  test_live_input.py  test_logging_resources.py  test_loop_range.py  test_macro_record.py  test_macros.py  test_marketplace.py  test_mcp_analyzer.py  (+43 more)
viewer3d/: CREDITS.md  index.html  main.js  rig_layout.json
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+185 files in other folders)
